--- a/index.html
+++ b/index.html
@@ -85,9 +85,11 @@
     
     <div class="hero">
         <div class="hero__wrap">
-            <h1 class="hero__heading">Welcome to Parkway Preschool</h1>
-            <h2 class="hero__subheading">Every Child<span class="hero__subheading--span"> Matters</span></h2>
-            <a href="#" class="btn">Important Items for the 2019 Year</a>
+           <div class="hero__center">
+                <h1 class="hero__heading">Welcome to Parkway Preschool</h1>
+                <h2 class="hero__subheading">Every Child<span class="hero__subheading--span"> Matters</span></h2>
+                <a href="#" class="btn">Important Items for the 2019 Year</a>
+           </div> 
         </div>
         <div class="hero__wrap-two">
             <h1 class="hero__heading">next</h1>
