1st updates in two weeks

--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
         <div class="header__main-sect">
             <div class="header__logo">
                 <a href="/index.html" class="header__logo-link">
-                    <img class="header__logo-image" src="img/logo.png" alt="parkway logo">
+                    <img class="header__logo-image" src="img/logo.jpg" alt="parkway logo">
                 </a>
              </div>
              <nav class="header__nav">
                 <ul class="header__nav-list">
+                   <li class="header__nav-item">
+                        <a href="/index.html" class="header__nav-link">Home</a>
+                    </li>
                     <li class="header__nav-item has-submenu">
                         <a href="#" class="header__nav-link">About Us</a>
                         <ul>
@@ -283,7 +286,7 @@
                     
                     <div class="footer__logo-wrap">
                         <a href="#" class="footer__logo">
-                            <img src="img/logo.png" alt="parkway logo">
+                            <img src="img/logo.jpg" alt="parkway logo">
                         </a>           
                     </div>
                     
@@ -329,7 +332,7 @@
             <div class="footer__icon-wrap">
                 <i class="footer__icon fa fa-facebook"></i>
                 <i class="footer__icon fa fa-twitter"></i>
-                <i class="footer__icon fa fa-pinterest"></i>
+                <i class="footer__icon fa fa-linkedin"></i>
             </div>
         </div>
     </footer>
