--- a/aboutus.html
+++ b/aboutus.html
@@ -129,6 +129,6 @@
     
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/slick/slick.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script-aboutus.js"></script>
 </body>
 </html>
