--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 </head>
 
 <body>
+   
+    <div class="hamburger-icon">
+        <div class="hamburger-icon__middle"></div>
+    </div> 
+   
     <header class="header">
        
         <div class="header__top-sect">
