--- a/aboutus.html
+++ b/aboutus.html
@@ -231,7 +231,7 @@
         <p class="footer__copyright">
             Copyright &copy; <span class="year">2018</span>. Parkway Presbyterian Preschool &amp; Kindergarten. All rights reserved. 
         </p>
-        <p class="footer__copyright">Designed by <a href="https://github.com/JasonDuquain">JDuquain</a> 
+        <p class="footer__copyright">Designed by <a href="https://github.com/JasonDuquain" target="_blank" class="footer__me">JDuquain</a> 
     </div>
     
     <button class="js-btt-btn" >
