--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                     <ul class="header__top-bar-contact">
                         <li class="header__top-bar-item">
                             <i class="header__top-bar-icon fa fa-phone"></i>
-                            <a href="" class="header__top-bar-link sm">1-678-867-5309</a>
+                            <a href="tel:1-678-230-4384" class="header__top-bar-link header__phone-icon">1-678-230-4384</a>
                         </li>
                         <li class="header__top-bar-item">
                             <i class="header__top-bar-icon fa fa-envelope"></i>
-                            <a href="" class="header__top-bar-link">school@parkway.com</a>
+                            <a href="mailto:school@parkway.com" class="header__top-bar-link">school@parkway.com</a>
                         </li>
                     </ul>
                 </div>
@@ -291,7 +291,7 @@
         <p class="footer__copyright">
             Copyright &copy; <span class="year">2018</span>. Parkway Presbyterian Preschool &amp; Kindergarten. All rights reserved. 
         </p>
-        <p class="footer__copyright">Designed by <a href="https://github.com/JasonDuquain" target="_blank">JDuquain</a> 
+        <p class="footer__copyright">Designed by <a href="https://github.com/JasonDuquain" target="_blank" class="footer__me">JDuquain</a> 
     </div>
     
     <button class="js-btt-btn" >
