fixed all anchor links to not use fwd slash

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
         <div class="header__main-sect">
             <div class="header__logo">
-                <a href="/index.html" class="header__logo-link">
+                <a href="index.html" class="header__logo-link">
                     <img class="header__logo-image" src="img/logo.jpg" alt="parkway logo">
                 </a>
              </div>
@@ -56,18 +56,18 @@
              <nav class="header__nav">
                 <ul class="header__nav-list">
                    <li class="header__nav-item">
-                        <a href="/index.html" class="header__nav-link" data-title="Home">Home</a>
+                        <a href="index.html" class="header__nav-link" data-title="Home">Home</a>
                     </li>
                     <li class="header__nav-item has-submenu">
-                        <a href="/aboutus.html" class="header__nav-link" data-title="AboutUs">About Us</a>
+                        <a href="aboutus.html" class="header__nav-link" data-title="AboutUs">About Us</a>
                         <ul>
-                           <li><a href="/aboutus.html#testone">Mission</a></li>
-                           <li><a href="/aboutus.html#testtwo">Our Story</a></li>
+                           <li><a href="aboutus.html#testone">Mission</a></li>
+                           <li><a href="aboutus.html#testtwo">Our Story</a></li>
                            <li><a href="#">Meet Our Staff</a></li>
                        </ul>
                     </li>
                     <li class="header__nav-item has-submenu">
-                        <a href="/program.html" class="header__nav-link" data-title="Program">Program</a>
+                        <a href="program.html" class="header__nav-link" data-title="Program">Program</a>
                         <ul>
                            <li><a href="#">Overview</a></li>
                            <li><a href="#">Activities</a></li>
@@ -76,7 +76,7 @@
                        </ul>
                     </li>
                     <li class="header__nav-item has-submenu">
-                        <a href="/curriculum.html" class="header__nav-link" data-title="Curriculum">Curriculum</a>
+                        <a href="curriculum.html" class="header__nav-link" data-title="Curriculum">Curriculum</a>
                         <ul>
                            <li><a href="#">Classes</a></li>
                        </ul>
@@ -85,10 +85,10 @@
                         <a href="calendar.html" class="header__nav-link" data-title="Calendar">Calendar</a>
                     </li>
                     <li class="header__nav-item">
-                        <a href="/forms.html" class="header__nav-link" data-title="Forms">Forms</a>
+                        <a href="forms.html" class="header__nav-link" data-title="Forms">Forms</a>
                     </li>
                     <li class="header__nav-item">
-                        <a href="/contactus.html" class="header__nav-link" data-title="ContactUs">Contact Us</a>
+                        <a href="contactus.html" class="header__nav-link" data-title="ContactUs">Contact Us</a>
                     </li>
                 </ul>
              </nav>
@@ -266,7 +266,7 @@
                     </p>
                     <i class="footer__contact-icon fa fa-phone"></i>
                     <p class="footer__telephone">
-                        1-800-DRU-IDIA
+                        1-678-230-4384
                     </p>
                     <i class="footer__contact-icon fa fa-envelope"></i>
                     <p class="footer__email">
