--- a/contactus.html
+++ b/contactus.html
@@ -26,11 +26,11 @@
                     <ul class="header__top-bar-contact">
                         <li class="header__top-bar-item">
                             <i class="header__top-bar-icon fa fa-phone"></i>
-                            <a href="" class="header__top-bar-link sm">1-678-867-5309</a>
+                            <a href="tel:1-678-230-4384" class="header__top-bar-link header__phone-icon">1-678-230-4384</a>
                         </li>
                         <li class="header__top-bar-item">
                             <i class="header__top-bar-icon fa fa-envelope"></i>
-                            <a href="" class="header__top-bar-link">school@parkway.com</a>
+                            <a href="mailto:school@parkway.com" class="header__top-bar-link">school@parkway.com</a>
                         </li>
                     </ul>
                 </div>
@@ -57,18 +57,18 @@
              <nav class="header__nav">
                 <ul class="header__nav-list">
                    <li class="header__nav-item">
-                        <a href="/index.html" class="header__nav-link" data-title="Home">Home</a>
+                        <a href="index.html" class="header__nav-link" data-title="Home">Home</a>
                     </li>
                     <li class="header__nav-item has-submenu">
-                        <a href="/aboutus.html" class="header__nav-link" data-title="AboutUs">About Us</a>
+                        <a href="aboutus.html" class="header__nav-link" data-title="AboutUs">About Us</a>
                         <ul>
-                           <li><a href="/aboutus.html#testone">Mission</a></li>
-                           <li><a href="/aboutus.html#testtwo">Our Story</a></li>
+                           <li><a href="aboutus.html#testone">Mission</a></li>
+                           <li><a href="aboutus.html#testtwo">Our Story</a></li>
                            <li><a href="#">Meet Our Staff</a></li>
                        </ul>
                     </li>
                     <li class="header__nav-item has-submenu">
-                        <a href="/program.html" class="header__nav-link" data-title="Program">Program</a>
+                        <a href="program.html" class="header__nav-link" data-title="Program">Program</a>
                         <ul>
                            <li><a href="#">Overview</a></li>
                            <li><a href="#">Activities</a></li>
@@ -77,19 +77,19 @@
                        </ul>
                     </li>
                     <li class="header__nav-item has-submenu">
-                        <a href="/curriculum.html" class="header__nav-link" data-title="Curriculum">Curriculum</a>
+                        <a href="curriculum.html" class="header__nav-link" data-title="Curriculum">Curriculum</a>
                         <ul>
                            <li><a href="#">Classes</a></li>
                        </ul>
                     </li>
                     <li class="header__nav-item">
-                        <a href="/calendar.html" class="header__nav-link" data-title="Calendar">Calendar</a>
+                        <a href="calendar.html" class="header__nav-link" data-title="Calendar">Calendar</a>
                     </li>
                     <li class="header__nav-item">
-                        <a href="/forms.html" class="header__nav-link" data-title="Forms">Forms</a>
+                        <a href="forms.html" class="header__nav-link" data-title="Forms">Forms</a>
                     </li>
                     <li class="header__nav-item">
-                        <a href="/contactus.html" class="header__nav-link" data-title="ContactUs">Contact Us</a>
+                        <a href="contactus.html" class="header__nav-link" data-title="ContactUs">Contact Us</a>
                     </li>
                 </ul>
              </nav>
