--- a/program.html
+++ b/program.html
@@ -91,9 +91,8 @@
     </header>
     
     <div class="hero">
-        <div class="hero__wrap-2">
-            <h1 id="test" class="hero__heading">THIS IS THE PROGRAM PAGE</h1>
-            
+        <div class="hero__wrap-2 program"> 
+        <h1 id="test" class="hero__heading">THIS IS THE PROGRAM PAGE</h1>
         </div>
     </div>
 
