more updates aboutus

--- a/aboutus.html
+++ b/aboutus.html
@@ -116,6 +116,9 @@
                     <p class="aboutus__para">
                         <span class="aboutus__start">Our Mission:</span> To partner with parents to offer a loving, nurturing, and Christ-filled environment where each child can be encouraged to develop their unique personalities and god-given talents.
                     </p>
+                    <p class="aboutus__para">
+                        <img src="img/logo.jpg" alt="">
+                    </p>
                 </div>
                 <div style="background-color: green;" id="ourstory" class="hidden aboutus__sect">
                     <p class="aboutus__para--2">
@@ -127,19 +130,101 @@
                     <p class="aboutus__para--2">
                         <span class="aboutus__start">Our Families:</span>  Parents are an integral part of the program and are partners in the learning process. We invite parents into our preschool to serve and assist in many ways routinely such as the library and office, but often find many ways to assist within the classroom specifically to help the teacher. Parent/teacher conferences are held twice a year in addition to the daily and weekly communication between teachers and parents. Simply put, our Parkway families are the best and we consider it a high honor to partner in your child’s preschool years of learning and growth.</p>
                 </div>
-                <div style="color: pink;" id="staff" class="hidden aboutus__sect">
-                    <p>
-                        About: All staff at Parkway Presbyterian Preschool are CPR, First Aid, and Fire Safety Certified. They receive extensive background checks prior to employment and must complete 10 hours annually of training in Early Childhood Education. Many of our staff hold teaching degrees and hold several years of teaching experience. 
-                        Office Staff: 
+                <div id="staff" class="hidden aboutus__sect">
+                    <p class="aboutus__para--3">
+                        <span class="aboutus__start">About Us:</span> All staff at Parkway Presbyterian Preschool are CPR, First Aid, and Fire Safety Certified. They receive extensive background checks prior to employment and must complete 10 hours annually of training in Early Childhood Education. Many of our staff hold teaching degrees and hold several years of teaching experience.
+                    </p>
+                    <p class="aboutus__para--3">        
+                        <span class="aboutus__start">Office Staff:</span>
                         Erica Shaddix, Director, director@parkwaypreschool.com (add pic) 
                         Lisa Service, Assistant Director, lisa@parkwaypreschool.com (add pic) 
                         Jami Stargel, Bookkeeper, jami@parkwaypreschool.com (add pic) 
 
                     </p>
-                    <p>twos</p>
-                    <p>threes</p>
-                    <p>fours</p>
-                    <p>fives</p>
+                    <p class="aboutus__para--3">        
+                        <span class="aboutus__start">Twos:</span>
+                        Name 
+                        Position 
+                        Email 
+                        Suzanne Benton 
+                        Lead Teacher 
+                        suzanne@parkwaypreschool.com 
+                        Julie Currie 
+                        Lead Teacher 
+                        juliec@parkwaypreschool.com 
+                        Ginny Green 
+                        Assistant Teacher 
+                        ginny@parkwaypreschool.com 
+                        Gill Jennings 
+                        Assistant Teacher 
+                        gill@parkwaypreschool.com 
+                        Laura Naile 
+                        Assistant Teacher 
+                        laura@parkwaypreschool.com 
+                    </p>
+                    <p class="aboutus__para--3">        
+                        <span class="aboutus__start">Threes:</span>
+                        Name 
+                        Position 
+                        Email 
+                        Haley Barnett 
+                        Lead Teacher 
+                        haley@parkwaypreschool.com 
+                        Shani Cobb 
+                        Assistant Teacher 
+                        shani@parkwaypreschool.com 
+                        Stacey Corcimiglia 
+                        Assistant Teacher 
+                        stacey@parkwaypreschool.com 
+                        Sara Creager 
+                        Lead Teacher 
+                        sara@parkwaypreschool.com 
+                        Charla Liedahl 
+                        Assistant Teacher 
+                        charla@parkwaypreschool.com 
+                    </p>
+                    <p class="aboutus__para--3">        
+                        <span class="aboutus__start">Fours:</span>
+                        Name 
+                        Position 
+                        Email 
+                        Jennifer Coffey 
+                        Lead Teacher 
+                        jennifer@parkwaypreschool.com 
+                        Regina Ennis 
+                        Assistant Teacher 
+                        regina@parkwaypreschool.com 
+                        Marcie Jurney 
+                        Lead Teacher 
+                        marcie@parkwaypreschool.com  
+                        Amy Maples 
+                        Lead Teacher 
+                        amy@parkwaypreschool.com 
+                        Nancy McNeill 
+                        Assistant Teacher 
+                        nancy@parkwaypreschool.com 
+                        Shay Ragsdale 
+                        Assistant Teacher 
+                        shay@parkwaypreschool.com  
+                        Cindy Schival 
+                        Lead Teacher 
+                        cindy@parkwaypreschool.com 
+                    </p>
+                    <p class="aboutus__para--3">        
+                        <span class="aboutus__start">Fives:</span>
+                        Name 
+                        Position 
+                        Email 
+                        Kitty Atmore 
+                        Lead Teacher 
+                        kitty@parkwaypreschool.com 
+                        Kerri Davis 
+                        Lead Teacher 
+                        kerri@parkwaypreschool.com 
+                        Bridgitt Norton		 
+                        Assistant Teacher 
+                        bridgitt@parkwaypreschool.com   
+                    </p>
 
                 </div>
             </div>
@@ -156,6 +241,9 @@
             <p class="accordion-para">
                 <span class="accordion-start-2">Our Mission:</span> To partner with parents to offer a loving, nurturing, and Christ-filled environment where each child can be encouraged to develop their unique personalities and god-given talents.
             </p>
+            <p class="aboutus__para">
+                <img src="img/logo.jpg" alt="">
+            </p>
         </div>
         <button class="accordion">Our <span class="accordion__span">Story</span></button>
         <div class="accordion-content">
@@ -165,8 +253,101 @@
         </div>
         <button class="accordion">Our <span class="accordion__span">Staff</span></button>
         <div class="accordion-content">
-            <p class="accordion-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ex quisquam expedita, corporis cumque officiis praesentium temporibus reiciendis incidunt nobis nesciunt minima, repellat recusandae distinctio facilis tempore, est voluptatum deleniti.</p>
-            <p class="accordion-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ex quisquam expedita, corporis cumque officiis praesentium temporibus reiciendis incidunt nobis nesciunt minima, repellat recusandae distinctio facilis tempore, est voluptatum deleniti.</p>
+            <p class="accordion-para">
+                    <span class="aboutus__start">About Us:</span> All staff at Parkway Presbyterian Preschool are CPR, First Aid, and Fire Safety Certified. They receive extensive background checks prior to employment and must complete 10 hours annually of training in Early Childhood Education. Many of our staff hold teaching degrees and hold several years of teaching experience.
+                </p>
+                <p class="accordion-para">      
+                    <span class="aboutus__start">Office Staff:</span>
+                    Erica Shaddix, Director, director@parkwaypreschool.com (add pic) 
+                    Lisa Service, Assistant Director, lisa@parkwaypreschool.com (add pic) 
+                    Jami Stargel, Bookkeeper, jami@parkwaypreschool.com (add pic) 
+
+                </p>
+                <p class="accordion-para">    
+                    <span class="aboutus__start">Twos:</span>
+                    Name 
+                    Position 
+                    Email 
+                    Suzanne Benton 
+                    Lead Teacher 
+                    suzanne@parkwaypreschool.com 
+                    Julie Currie 
+                    Lead Teacher 
+                    juliec@parkwaypreschool.com 
+                    Ginny Green 
+                    Assistant Teacher 
+                    ginny@parkwaypreschool.com 
+                    Gill Jennings 
+                    Assistant Teacher 
+                    gill@parkwaypreschool.com 
+                    Laura Naile 
+                    Assistant Teacher 
+                    laura@parkwaypreschool.com 
+                </p>
+                <p class="accordion-para">       
+                    <span class="aboutus__start">Threes:</span>
+                    Name 
+                    Position 
+                    Email 
+                    Haley Barnett 
+                    Lead Teacher 
+                    haley@parkwaypreschool.com 
+                    Shani Cobb 
+                    Assistant Teacher 
+                    shani@parkwaypreschool.com 
+                    Stacey Corcimiglia 
+                    Assistant Teacher 
+                    stacey@parkwaypreschool.com 
+                    Sara Creager 
+                    Lead Teacher 
+                    sara@parkwaypreschool.com 
+                    Charla Liedahl 
+                    Assistant Teacher 
+                    charla@parkwaypreschool.com 
+                </p>
+                <p class="accordion-para">       
+                    <span class="aboutus__start">Fours:</span>
+                    Name 
+                    Position 
+                    Email 
+                    Jennifer Coffey 
+                    Lead Teacher 
+                    jennifer@parkwaypreschool.com 
+                    Regina Ennis 
+                    Assistant Teacher 
+                    regina@parkwaypreschool.com 
+                    Marcie Jurney 
+                    Lead Teacher 
+                    marcie@parkwaypreschool.com  
+                    Amy Maples 
+                    Lead Teacher 
+                    amy@parkwaypreschool.com 
+                    Nancy McNeill 
+                    Assistant Teacher 
+                    nancy@parkwaypreschool.com 
+                    Shay Ragsdale 
+                    Assistant Teacher 
+                    shay@parkwaypreschool.com  
+                    Cindy Schival 
+                    Lead Teacher 
+                    cindy@parkwaypreschool.com 
+                </p>
+                <p class="accordion-para">       
+                    <span class="aboutus__start">Fives:</span>
+                    Name 
+                    Position 
+                    Email 
+                    Kitty Atmore 
+                    Lead Teacher 
+                    kitty@parkwaypreschool.com 
+                    Kerri Davis 
+                    Lead Teacher 
+                    kerri@parkwaypreschool.com 
+                    Bridgitt Norton		 
+                    Assistant Teacher 
+                    bridgitt@parkwaypreschool.com   
+                </p>
+
         </div>
         </div>
     </section>
