--- a/contactus.html
+++ b/contactus.html
@@ -135,7 +135,7 @@
               <h3 class="contact-hdg contact-hdg-two">Our <span class="contact-hdg-span">Hours</span></h3>
               <ul class="contact-list list-two">
                   <li class="contact-item">Monday to Friday</li>
-                  <li class="contact-item hours">8:30AM - 1:00PM</li>
+                  <li class="contact-item hours">8:30AM &ndash; 1:00PM</li>
                   <li class="contact-item">Saturday and Sunday</li>
                   <li class="contact-item hours">Closed</li>
               </ul>
