--- a/contactus.html
+++ b/contactus.html
@@ -124,14 +124,24 @@
       <div class="form-wrapper">
         <div class="contacts">
              <div class="contact-wrap">
-                <h3 class="contact-hdg contact-hdg-one">Main <span class="contact-hdg-span">Office</span></h3>
+                <h3 class="contact-hdg contact-hdg-one">
+                    <svg class="contact-icon">
+                        <use xlink:href="img/sprite.svg#icon-location2" />
+                    </svg>
+                    Main <span class="contact-hdg-span">Office</span>
+                </h3>
                 <ul class="contact-list list-one">
                     <li class="contact-item">5830 Bethelview Road</li>
                     <li class="contact-item">Cumming, GA 30040</li>
                     <li class="contact-item">1-678-513-3909</li>
                 
               </ul>
-              <h3 class="contact-hdg contact-hdg-two">Our <span class="contact-hdg-span">Hours</span></h3>
+              <h3 class="contact-hdg contact-hdg-two">
+                  <svg class="contact-icon">
+                      <use xlink:href="img/sprite.svg#icon-calendar" />
+                  </svg>
+                  Our <span class="contact-hdg-span">Hours</span>
+              </h3>
               <ul class="contact-list list-two">
                   <li class="contact-item">Monday to Friday</li>
                   <li class="contact-item hours">8:30AM &ndash; 1:00PM</li>
@@ -148,7 +158,11 @@
             <p class="field field-text">
                 <label for="applicant-name">Name:</label>
                 <span class="field-prefixed">
-                  <span class="field-prefix" id="applicant-name-prefix"><i class="fa fa-user"></i></span>
+                  <span class="field-prefix" id="applicant-name-prefix">
+                      <svg class="form-icon">
+                          <use xlink:href="img/sprite.svg#icon-user" />
+                      </svg>
+                  </span>
                   <input name="applicant-name" id="applicant-name" type="text" placeholder="Full Name Here"/>
                 </span>
 
@@ -156,7 +170,11 @@
               <p class="field field-text">
                 <label for="applicant-email">Email Address:</label>
                 <span class="field-prefixed">
-                  <span class="field-prefix" id="applicant-email-prefix"><i class="fa fa-envelope"></i></span>
+                  <span class="field-prefix" id="applicant-email-prefix">
+                      <svg class="form-icon">
+                          <use xlink:href="img/sprite.svg#icon-envelop" />
+                      </svg>
+                  </span>
                   <input name="applicant-email" id="applicant-email" type="email" />
                 </span>
 
@@ -164,20 +182,30 @@
             <p class="field field-text full-width">
                 <label for="applicant-date">Subject:</label>
                 <span class="field-prefixed">
-                  <span class="field-prefix" id="applicant-date-prefix"><i class="fa fa-book"></i></span>
+                  <span class="field-prefix" id="applicant-date-prefix">
+                      <svg class="form-icon">
+                          <use xlink:href="img/sprite.svg#icon-book" />
+                      </svg>
+                  </span>
                   <input name="applicant-date" id="applicant-date" type="text" />
                 </span>
               </p>
             <p class="field field-text full-width">
                 <label for="applicant-pencil">Your Message:</label>
                 <span class="field-prefixed">
-                  <span class="field-prefix" id="applicant-pencil-prefix"><i class="fa fa-pencil"></i></span>
+                  <span class="field-prefix" id="applicant-pencil-prefix">
+                      <svg class="form-icon">
+                          <use xlink:href="img/sprite.svg#icon-pencil" />
+                      </svg>
+                  </span>
                   <textarea></textarea>
                 </span>
               </p>
             <p class="full-width field">
                 <button type="submit" value="Submit" class="submit">    <span>SEND</span>
-                   <i class="fa fa-paper-plane"></i>
+                     <svg class="form-icon">
+                         <use xlink:href="img/sprite.svg#icon-paper-plane" />
+                     </svg>
                 </button>
             </p>
           </form>
