--- a/forms.html
+++ b/forms.html
@@ -193,7 +193,7 @@
                 <div class="footer__times">
                     <h3 class="footer__subheading">Preschool <span class="footer__subheading-span">Hours</span></h3>
                     <p class="footer__days">Monday to Friday</p>
-                    <p class="footer__hours">8:30AM &ndash; 1:00PM</p>
+                    <p class="footer__hours">9:00AM &ndash; 1:00PM</p>
                     <p class="footer__days">Saturday</p>
                     <p class="footer__hours">Closed</p>
                     <p class="footer__days">Sunday</p>
@@ -249,7 +249,7 @@
     </footer>
     <div class="footer__bottom">
         <p class="footer__copyright">
-            Copyright &copy; <span class="year">2018</span>. Parkway Presbyterian Preschool &amp; Kindergarten. All rights reserved. 
+            Copyright &copy; <span class="year">2018</span> Parkway Presbyterian Preschool &amp; Kindergarten. All rights reserved. 
         </p>
         <p class="footer__design">website design by <a href="https://jasonduquain.me" target="_blank" class="footer__me" rel="noopener">Jason Duquain</a> 
     </div>
