added and started staff page

--- a/aboutus.html
+++ b/aboutus.html
@@ -65,7 +65,7 @@
                         <ul>
                            <li><a href="aboutus.html#testone">Mission</a></li>
                            <li><a href="aboutus.html#testtwo">Our Story</a></li>
-                           <li><a href="#">Meet Our Staff</a></li>
+                           <li><a href="staff.html">Meet Our Staff</a></li>
                        </ul>
                     </li>
                     <li class="header__nav-item has-submenu">
@@ -415,8 +415,8 @@
                     <p class="footer__hours">Closed</p>
 
                     <p class="footer__closings">
-                        Please check the Forsyth County School Closings/Calendar
-                        during inclement weather (ADD LINK!)
+                        Please check the <a href="https://www.forsyth.k12.ga.us/forsyth" class="footer__closings-link" target="_blank" rel="noopener">Forsyth County School Closings/Calendar</a>
+                        during inclement weather
                     </p>
                 </div>
                 <div class="footer__contact">
@@ -447,7 +447,7 @@
                         1-770-888-9935
                     </p>
                     <p class="footer__taxid">
-                        Tax Id #000-0000
+                        Federal Tax ID #02-0633602
                     </p>
                 </div>
             </div>    
