--- a/forms.html
+++ b/forms.html
@@ -131,42 +131,66 @@
                     <a href="/docs/2019-2020%20Registration%20Form.pdf" class="forms__link">
                         <img src="img/adobe.png" alt="acrobat icon">
                     </a>
-                    <p class="forms__item">2019-2020 Registration Form</p>
+                    <p class="forms__item">
+                        <a href="/docs/2019-2020%20Registration%20Form.pdf" class="forms__link">
+                            2019-2020 Registration Form
+                        </a>
+                    </p>
                     <p class="forms__info">Adobe Acrobat file, 571 KB</p>   
                 </div>
                 <div class="forms__wrap">
                     <a href="/docs/Authorization%20to%20Administer%20Medication.pdf" class="forms__link">
                         <img src="img/adobe.png" alt="acrobat icon">
                     </a>
-                    <p class="forms__item">Authorization to Administer Medication</p>
+                    <p class="forms__item">
+                        <a href="/docs/Authorization%20to%20Administer%20Medication.pdf" class="forms__link">
+                            Authorization to Administer Medication
+                        </a>
+                    </p>
                     <p class="forms__info">Adobe Acrobat file, 132 KB</p>   
                 </div>
                 <div class="forms__wrap">
                     <a href="/docs/Exemption%20from%20Immunization.pdf" class="forms__link">
                         <img src="img/adobe.png" alt="acrobat icon">
                     </a>
-                    <p class="forms__item">Exemption from Immunization</p>
+                    <p class="forms__item">
+                        <a href="/docs/Exemption%20from%20Immunization.pdf" class="forms__link">
+                            Exemption from Immunization
+                        </a>
+                    </p>
                     <p class="forms__info">Adobe Acrobat file, 39 KB</p>   
                 </div>
                 <div class="forms__wrap">
                     <a href="/docs/Medical%20Action%20Plan.pdf" class="forms__link">
                         <img src="img/adobe.png" alt="acrobat icon">
                     </a>
-                    <p class="forms__item">Medical Action Plan</p>
+                    <p class="forms__item">
+                        <a href="/docs/Medical%20Action%20Plan.pdf" class="forms__link">
+                            Medical Action Plan
+                        </a>
+                    </p>
                     <p class="forms__info">Adobe Acrobat file, 217 KB</p>   
                 </div>
                 <div class="forms__wrap">
                     <a href="/docs/Medical%20Release%20Form.pdf" class="forms__link">
                         <img src="img/adobe.png" alt="acrobat icon">
                     </a>
-                    <p class="forms__item">Medical Release Form</p>
+                    <p class="forms__item">
+                        <a href="/docs/Medical%20Release%20Form.pdf" class="forms__link">
+                            Medical Release Form
+                        </a>
+                    </p>
                     <p class="forms__info">Adobe Acrobat file, 57 KB</p>   
                 </div>
                 <div class="forms__wrap">
                     <a href="/docs/lunch%20bunch%20M%20T%2019%2020.pdf" class="forms__link">
                         <img src="img/adobe.png" alt="acrobat icon">
                     </a>
-                    <p class="forms__item">Lunch Bunch M T 19 20</p>
+                    <p class="forms__item">
+                        <a href="/docs/lunch%20bunch%20M%20T%2019%2020.pdf" class="forms__link">
+                            Lunch Bunch M T 19 20
+                        </a>
+                    </p>
                     <p class="forms__info">Adobe Acrobat file, 249 KB</p>   
                 </div>
             </div>
@@ -204,8 +228,8 @@
                     <p class="footer__hours">Closed</p>
 
                     <p class="footer__closings">
-                        Please check the Forsyth County School Closings/Calendar
-                        during inclement weather (ADD LINK!)
+                        Please check the <a href="https://www.forsyth.k12.ga.us/forsyth" class="footer__closings-link" target="_blank" rel="noopener">Forsyth County School Closings/Calendar</a>
+                        during inclement weather
                     </p>
                 </div>
                 <div class="footer__contact">
@@ -236,7 +260,7 @@
                         1-770-888-9935
                     </p>
                     <p class="footer__taxid">
-                        Tax Id #000-0000
+                        Federal Tax ID #02-0633602
                     </p>
                 </div>
             </div>    
