staff page first draft complete

--- a/curriculum.html
+++ b/curriculum.html
@@ -130,7 +130,7 @@
                             </div>
                             
                             <div class="curriculum__info">
-                                <p class="curriculum__summary">The Twos classes teach from a broad variety of resources that focus on the Bible, academics, and development which allows the child to explore, play and learn new things. <a href="https://www.lwtears.com/" class="curriculum__link" rel="noopener" target="_blank">Handwriting Without Tears</a> is a developmental writing program that begins in the twos and focuses on building muscles in the hands to produce good writing and fine motor skills.</p>
+                                <p class="curriculum__summary">The Twos classes teach from a broad variety of resources that focus on the Bible, academics, and development which allows the child to explore, play and learn new things. <a href="https://www.lwtears.com/" class="curriculum__link" rel="noopener" target="_blank">Handwriting Without Tears</a> is a developmental writing program that begins in the twos and focuses on building muscles in the hands to produce good writing and fine motor skills. Another component of our Twos is the social interaction between peers and adults on an independent level. For most children, the Twos class is the initial exposure to a classroom environment while still maintaining a play-based setting.</p>
                                 <small class="curriculum__note">**must be two on or before September 1<sup>st</sup>**</small> 
                             </div>
                         </div>
