--- a/staff.html
+++ b/staff.html
@@ -153,7 +153,7 @@
            <div class="staff__teachers-grid">
                 <ul class="staff__teachers-list">
                     <li class="staff__teachers-hdg">Teachers</li>
-                    <li class="staff__teachers-item">
+                    <li class="staff__teachers-item staff__teachers-item--first">
                         <a href="#twos" class="staff__teachers-link staff__teachers-link--current">Twos</a>
                     </li>
                     <li class="staff__teachers-item">
@@ -167,8 +167,8 @@
                     </li>
                     <li class="staff__teachers-btmhdg">Something</li>
                 </ul>
-                <div class="staff__teachers-table">
-                    <div id="twos" class="staff__teachers-listout staff__teachers-listout--visible">
+                <div class="staff__teachers-table-wrap">
+                    <div data-id="twos" class="staff__teachers-listout staff__teachers-listout--visible">
                         <table class="staff__teachers-table">
                             <tr>
                                 <th>Name</th>
@@ -202,7 +202,7 @@
                             </tr>
                         </table>
                     </div>
-                    <div id="threes" class="staff__teachers-listout">
+                    <div data-id="threes" class="staff__teachers-listout">
                         <table class="staff__teachers-table">
                             <tr>
                                 <th>Name</th>
@@ -231,7 +231,7 @@
                             </tr>
                             <tr>
                                 <td>Charla Liedahl</td>
-                                <td>Assistant Teacher</td>
+                                <td>Lead Teacher</td>
                                 <td><a href="mailto:charla@parkwaypreschool.com">charla@parkwaypreschool.com</a></td>
                             </tr>
                             <tr>
@@ -240,9 +240,9 @@
                                 <td><a href="mailto:andrea@parkwaypreschool.com">andrea@parkwaypreschool.com</a></td>
                             </tr>
                             <tr>
-                                <td>Paola Seymour</td>
-                                <td>Lead Teacher</td>
-                                <td><a href="mailto:paola@parkwaypreschool.com">paola@parkwaypreschool.com</a></td>
+                                <td>Carrie Grimes</td>
+                                <td>Assistant Teacher</td>
+                                <td><a href="mailto:carrie@parkwaypreschool.com">carrie@parkwaypreschool.com</a></td>
                             </tr>
                             <tr>
                                 <td>Jennifer Ware</td>
@@ -251,7 +251,7 @@
                             </tr>
                         </table>
                     </div>
-                    <div id="fours" class="staff__teachers-listout">
+                    <div data-id="fours" class="staff__teachers-listout">
                         <table class="staff__teachers-table">
                             <tr>
                                 <th>Name</th>
@@ -293,9 +293,14 @@
                                 <td>Lead Teacher</td>
                                 <td><a href="mailto:cindy@parkwaypreschool.com">cindy@parkwaypreschool.com</a></td>
                             </tr>
+                            <tr>
+                                <td>Beth Sygman</td>
+                                <td>Assistant Teacher</td>
+                                <td><a href="mailto:beth@parkwaypreschool.com">beth@parkwaypreschool.com</a></td>
+                            </tr>
                         </table>
                     </div>
-                    <div id="fives" class="staff__teachers-listout">
+                    <div data-id="fives" class="staff__teachers-listout">
                         <table class="staff__teachers-table">
                             <tr>
                                 <th>Name</th>
@@ -316,6 +321,11 @@
                                 <td>Bridgitt Norton</td>
                                 <td>Assistant Teacher</td>
                                 <td><a href="mailto:bridgitt@parkwaypreschool.com">bridgitt@parkwaypreschool.com</a></td>
+                            </tr>
+                            <tr>
+                                <td>Lindsay Striplin</td>
+                                <td>Assistant Teacher</td>
+                                <td><a href="mailto:lindsay@parkwaypreschool.com">lindsay@parkwaypreschool.com</a></td>
                             </tr>
                         </table>
                     </div>
