--- a/index.html
+++ b/index.html
@@ -62,43 +62,17 @@
                    <li class="header__nav-item">
                         <a href="index.html" class="header__nav-link" data-title="Home">Home</a>
                     </li>
-                    <li class="header__nav-item has-submenu">
-                        <a href="aboutus.html" class="header__nav-link" data-title="AboutUs">
-                            <span>About Us</span>
-                            <svg class="header__nav-icon">
-                                <use xlink:href="img/sprite.svg#icon-chevron-down" />
-                            </svg>
-                        </a>
-                        <ul>
-                           <li><a href="aboutus.html#testone">Mission</a></li>
-                           <li><a href="aboutus.html#testtwo">Our Story</a></li>
-                           <li><a href="staff.html">Meet Our Staff</a></li>
-                       </ul>
+                    <li class="header__nav-item">
+                        <a href="aboutus.html" class="header__nav-link" data-title="AboutUs">About Us</a>
                     </li>
-                    <li class="header__nav-item has-submenu">
-                        <a href="program.html" class="header__nav-link" data-title="Program">
-                            <span>Program</span>
-                            <svg class="header__nav-icon">
-                                <use xlink:href="img/sprite.svg#icon-chevron-down" />
-                            </svg>
-                        </a>
-                        <ul>
-                           <li><a href="#">Overview</a></li>
-                           <li><a href="#">Activities</a></li>
-                           <li><a href="#">Registration</a></li>
-                           <li><a href="#">Rates &amp; Fees</a></li>
-                       </ul>
+                    <li class="header__nav-item">
+                        <a href="program.html" class="header__nav-link" data-title="Program">Program</a>
                     </li>
-                    <li class="header__nav-item has-submenu">
-                        <a href="curriculum.html" class="header__nav-link" data-title="Curriculum">
-                            <span>Curriculum</span>
-                            <svg class="header__nav-icon">
-                                <use xlink:href="img/sprite.svg#icon-chevron-down" />
-                            </svg>
-                        </a>
-                        <ul>
-                           <li><a href="#">Classes</a></li>
-                       </ul>
+                    <li class="header__nav-item">
+                        <a href="curriculum.html" class="header__nav-link" data-title="Curriculum">Classes</a> 
+                    </li>
+                    <li class="header__nav-item">
+                        <a href="staff.html" class="header__nav-link" data-title="Staff">Staff</a>
                     </li>
                     <li class="header__nav-item">
                         <a href="calendar.html" class="header__nav-link" data-title="Calendar">Calendar</a>
