--- a/program.html
+++ b/program.html
@@ -51,28 +51,17 @@
                    <li class="header__nav-item">
                         <a href="index.html" class="header__nav-link" data-title="Home">Home</a>
                     </li>
-                    <li class="header__nav-item has-submenu">
+                    <li class="header__nav-item">
                         <a href="aboutus.html" class="header__nav-link" data-title="AboutUs">About Us</a>
-                        <ul>
-                           <li><a href="aboutus.html#testone">Mission</a></li>
-                           <li><a href="aboutus.html#testtwo">Our Story</a></li>
-                           <li><a href="#">Meet Our Staff</a></li>
-                       </ul>
                     </li>
-                    <li class="header__nav-item has-submenu">
+                    <li class="header__nav-item">
                         <a href="program.html" class="header__nav-link" data-title="Program">Program</a>
-                        <ul>
-                           <li><a href="#">Overview</a></li>
-                           <li><a href="#">Activities</a></li>
-                       </ul>
                     </li>
-                    <li class="header__nav-item has-submenu">
-                        <a href="curriculum.html" class="header__nav-link" data-title="Curriculum">Curriculum</a>
-                        <ul>
-                           <li><a href="#">Classes</a></li>
-                           <li><a href="#">Registration</a></li>
-                           <li><a href="#">Rates &amp; Fees</a></li>
-                       </ul>
+                    <li class="header__nav-item">
+                        <a href="curriculum.html" class="header__nav-link" data-title="Curriculum">Classes</a> 
+                    </li>
+                    <li class="header__nav-item">
+                        <a href="staff.html" class="header__nav-link" data-title="Staff">Staff</a>
                     </li>
                     <li class="header__nav-item">
                         <a href="calendar.html" class="header__nav-link" data-title="Calendar">Calendar</a>
