updated textarea field

--- a/contactus.html
+++ b/contactus.html
@@ -187,7 +187,7 @@
                           <use xlink:href="img/sprite.svg#icon-pencil" />
                       </svg>
                   </span>
-                  <textarea></textarea>
+                  <textarea name="applicant-message"></textarea>
                 </span>
               </p>
             <p class="full-width field">
