--- a/contactus.html
+++ b/contactus.html
@@ -303,8 +303,8 @@
         </svg>
     </a>
     
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/script.js"></script>
+    <!--<script src="js/jquery-3.4.1.min.js"></script>-->
     <script src="https://kwes.io/js/kwes.js"></script>
+    <script src="js/script.js"></script>
     
 </body>
